# GameTrader

./: pyproject.toml
gametraderbackend/: manage.py
gametraderbackend/gametrader/: apps.py
gametraderbackend/gametraderbackend/: asgi.py  settings.py  urls.py  wsgi.py
