[tool.poetry]
name = "gametrader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
django-pytest = "^0.2.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
extend-exclude = '''
^/.venv
'''